--- a/esphome/bluetooth-proxy-02.yaml
+++ b/esphome/bluetooth-proxy-02.yaml
@@ -22,6 +22,11 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
 
+  manual_ip:
+    static_ip: 10.0.22.22
+    gateway: 10.0.22.1
+    subnet: 255.255.255.0
+
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "Bluetooth-Proxy-02"
