--- a/esphome/bluetooth-proxy-03.yaml
+++ b/esphome/bluetooth-proxy-03.yaml
@@ -22,6 +22,11 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
 
+  manual_ip:
+    static_ip: 10.0.22.23
+    gateway: 10.0.22.1
+    subnet: 255.255.255.0
+
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "Bluetooth-Proxy-03"
@@ -53,4 +58,15 @@ sensor:
       name: "Outside Battery-Voltage"
     signal_strength:
       name: "Outside Signal"
-    
+  - platform: atc_mithermometer
+    mac_address: "A4:C1:38:8D:C0:E1"
+    temperature:
+      name: "Andre Bedroom Temperature"
+    humidity:
+      name: "Andre Bedroom Humidity"
+    battery_level:
+      name: "Andre Bedroom Battery-Level"
+    battery_voltage:
+      name: "Andre Bedroom Battery-Voltage"
+    signal_strength:
+      name: "Andre Bedroom Signal"
