--- a/packages/lights/light_motion_timers_back_lights.yaml
+++ b/packages/lights/light_motion_timers_back_lights.yaml
@@ -1,3 +1,5 @@
+---
+
 timer:
   # When calling the start service on a timer that is already running, it resets
   # the duration it will need to finish and restart the timer without triggering
@@ -8,38 +10,38 @@ timer:
   outsidebacklight:
     duration: '00:10:00'
 
-automation:
+# automation:
 
-### Back Lights
-# Motion = Turn on
-  - alias: Turn on back lights when there is movement
-    trigger:
-      - platform: state
-        entity_id: binary_sensor.back_beam
-        to: 'on'
-    condition:
-      - condition: state  # 'night' condition: from sunset until sunrise
-        entity_id: sun.sun
-        state: 'below_horizon'
-    action:
-      - service: light.turn_on
-        data:
-          entity_id:
-            - light.outside_back
-      - service: timer.start
-        data:
-          entity_id: timer.outsidebacklight
+# ### Back Lights
+# # Motion = Turn on
+#   - alias: Turn on back lights when there is movement
+#     trigger:
+#       - platform: state
+#         entity_id: binary_sensor.back_beam
+#         to: 'on'
+#     condition:
+#       - condition: state  # 'night' condition: from sunset until sunrise
+#         entity_id: sun.sun
+#         state: 'below_horizon'
+#     action:
+#       - service: light.turn_on
+#         data:
+#           entity_id:
+#             - light.outside_back
+#       - service: timer.start
+#         data:
+#           entity_id: timer.outsidebacklight
 
-  ### Back Lights
-  # Timer end = Turn off
-  - alias: Turn off back lights 10 minutes after trigger
-    trigger:
-      platform: event
-      event_type: timer.finished
-      event_data:
-        entity_id: timer.outsidebacklight
-    action:
-      service: light.turn_off
-      data:
-        entity_id:
-          - light.outside_back
+#   ### Back Lights
+#   # Timer end = Turn off
+#   - alias: Turn off back lights 10 minutes after trigger
+#     trigger:
+#       platform: event
+#       event_type: timer.finished
+#       event_data:
+#         entity_id: timer.outsidebacklight
+#     action:
+#       service: light.turn_off
+#       data:
+#         entity_id:
+#           - light.outside_back
