--- a/packages/lights/light_triggers_plex.yaml
+++ b/packages/lights/light_triggers_plex.yaml
@@ -1,70 +1,70 @@
----
-automation:
-  - alias: TV Lounge playing
-    trigger:
-      - platform: state
-        entity_id: media_player.mass_shield
-        to: 'playing'
-      - platform: state
-        entity_id: media_player.shield
-        to: 'playing'
-    condition:
-      - condition: template
-        value_template: "{{ 'playing' in trigger.to_state.state }}"
-      - condition: state  # 'night' condition: from sunset until sunrise
-        entity_id: sun.sun
-        state: 'below_horizon'
-      - condition: time
-        after: '19:45:00'
-    action:
-      - choose:
-          # IF lots of sun and high battery skip
-          - conditions:
-              - condition: state
-                entity_id: light.lounge
-                state: 'off'
-            sequence:
-              - service: light.turn_on
-                data:
-                  entity_id: light.lounge
-              - delay:
-                  seconds: "2"
-      - service: switch.turn_on
-        target:
-          entity_id:
-            - switch.adaptive_lighting_sleep_mode_lounge
-            #- switch.adaptive_lighting_sleep_mode_kitchen
-      - condition: time
-        after: "19:45:00"
-      - service: light.turn_off
-        data:
-          entity_id:
-            - light.kitchen
-          transition: 25
+# ---
+# automation:
+#   - alias: TV Lounge playing
+#     trigger:
+#       - platform: state
+#         entity_id: media_player.mass_shield
+#         to: 'playing'
+#       - platform: state
+#         entity_id: media_player.shield
+#         to: 'playing'
+#     condition:
+#       - condition: template
+#         value_template: "{{ 'playing' in trigger.to_state.state }}"
+#       - condition: state  # 'night' condition: from sunset until sunrise
+#         entity_id: sun.sun
+#         state: 'below_horizon'
+#       - condition: time
+#         after: '19:45:00'
+#     action:
+#       - choose:
+#           # IF lots of sun and high battery skip
+#           - conditions:
+#               - condition: state
+#                 entity_id: light.lounge
+#                 state: 'off'
+#             sequence:
+#               - service: light.turn_on
+#                 data:
+#                   entity_id: light.lounge
+#               - delay:
+#                   seconds: "2"
+#       - service: switch.turn_on
+#         target:
+#           entity_id:
+#             - switch.adaptive_lighting_sleep_mode_lounge
+#             #- switch.adaptive_lighting_sleep_mode_kitchen
+#       - condition: time
+#         after: "19:45:00"
+#       - service: light.turn_off
+#         data:
+#           entity_id:
+#             - light.kitchen
+#           transition: 25
 
-  - alias: TV Lounge idle
-    trigger:
-      - platform: state
-        entity_id: media_player.mass_shield
-        to: 'idle'
-      - platform: state
-        entity_id: media_player.shield
-        to: 'idle'
-      - platform: state
-        entity_id: media_player.mass_shield
-        to: 'paused'
-      - platform: state
-        entity_id: media_player.shield
-        to: 'paused'
-    condition:
-      # - condition: template
-      #   value_template: "{{ 'idle' in trigger.to_state.state }}"
-      - condition: state  # 'night' condition: from sunset until sunrise
-        entity_id: sun.sun
-        state: 'below_horizon'
-    action:
-      - service: switch.turn_off
-        target:
-          entity_id:
-            - switch.adaptive_lighting_sleep_mode_lounge
-            - switch.adaptive_lighting_sleep_mode_kitchen
+#   - alias: TV Lounge idle
+#     trigger:
+#       - platform: state
+#         entity_id: media_player.mass_shield
+#         to: 'idle'
+#       - platform: state
+#         entity_id: media_player.shield
+#         to: 'idle'
+#       - platform: state
+#         entity_id: media_player.mass_shield
+#         to: 'paused'
+#       - platform: state
+#         entity_id: media_player.shield
+#         to: 'paused'
+#     condition:
+#       # - condition: template
+#       #   value_template: "{{ 'idle' in trigger.to_state.state }}"
+#       - condition: state  # 'night' condition: from sunset until sunrise
+#         entity_id: sun.sun
+#         state: 'below_horizon'
+#     action:
+#       - service: switch.turn_off
+#         target:
+#           entity_id:
+#             - switch.adaptive_lighting_sleep_mode_lounge
+#             - switch.adaptive_lighting_sleep_mode_kitchen
