--- a/packages/lights/lights_main_bathroom.yaml
+++ b/packages/lights/lights_main_bathroom.yaml
@@ -61,10 +61,10 @@ automation:
   - alias: "Turn on main bathroom lights+fan"
     trigger:
       - platform: state
-        entity_id: sensor.bluetooth_proxy_01_main_bathroom_humidity, sensor.main_bedroom_humidity   # 1st bathroom 2nd main bedroom
+        entity_id: sensor.bluetooth_proxy_01_main_bathroom_humidity, sensor.bluetooth_proxy_01_main_bedroom_humidity   # 1st bathroom 2nd main bedroom
     condition:
       - condition: template
-        value_template: "{{ (states.sensor.bluetooth_proxy_01_main_bathroom_humidity.state|float - states.sensor.main_bedroom_humidity.state|float > 15) or (states.sensor.bluetooth_proxy_01_main_bathroom_humidity.state|float == 99.9) or states.binary_sensor.master_bathroom_humidity_rising.attributes['gradient']|float > 0.04 }}"
+        value_template: "{{ (states.sensor.bluetooth_proxy_01_main_bathroom_humidity.state|float - states.sensor.bluetooth_proxy_01_main_bedroom_humidity.state|float > 15) or (states.sensor.bluetooth_proxy_01_main_bathroom_humidity.state|float == 99.9) or states.binary_sensor.master_bathroom_humidity_rising.attributes['gradient']|float > 0.04 }}"
       - condition: state  # 'day' condition: from sunrise until sunset
         entity_id: sun.sun
         state: 'above_horizon'
