--- a/packages/security/petdoor.yaml
+++ b/packages/security/petdoor.yaml
@@ -28,6 +28,9 @@ automation:
       - condition: template
         value_template: >
           {{ trigger.from_state.state != "unavailable" }}
+      - condition: template
+        value_template: >
+          {{ trigger.to_state.state != "unavailable" }}
     action:
       - service: script.alert
         data:
