--- a/packages/lights/light_triggers_front_garage.yaml
+++ b/packages/lights/light_triggers_front_garage.yaml
@@ -30,7 +30,7 @@ automation:
         entity_id: binary_sensor.front_garage_door_window
         to: 'on'
       - platform: state
-        entity_id: binary_sensor.garage_inside_door
+        entity_id: binary_sensor.front_garage_inside_door_contact
         to: 'on'
     condition:
       - condition: state  # 'night' condition: from sunset until sunrise
