--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,7 @@ home-assistant.log.*
 alexa_media*.html
 music_assistant.db
 solcast.json
+
+# solcast integration
+solcast-sites.json
+solcast-usage.json
