add more fake secrets

--- a/secrets.fake.yaml
+++ b/secrets.fake.yaml
@@ -8,6 +8,8 @@ EskomSePush: token
 AlphaVantage: api_key
 
 # ESPHome (generic)
+wifi_ssid: ssid
+wifi_password: password
 esphome_api_password: password
 esphome_ota_password: password
 esphome_web_server_password: password
