--- a/esphome/bluetooth-proxy.yaml
+++ b/esphome/bluetooth-proxy.yaml
@@ -17,8 +17,10 @@ api:
     key: "HqdFDgUd1KELwFP0o9vYSn7U1UvS/DQRegkNliMCmQk="
 
 ota:
-  - platform: esphome
-    password: "647e232021c2d612ec6d2e6a5aaeaad5"
+  platform: esphome
+  password: "647e232021c2d612ec6d2e6a5aaeaad5"
+  num_attempts: 3
+  safe_mode: "no"
 
 wifi:
   ssid: !secret wifi_ssid
