--- a/esphome/bluetooth-proxy-02.yaml
+++ b/esphome/bluetooth-proxy-02.yaml
@@ -19,8 +19,9 @@ api:
 ota:
   platform: esphome
   password: "e873124ce11a8cdb835f5592ad7c4af7"
+
+safe_mode:
   num_attempts: 3
-  safe_mode: "no"
 
 wifi:
   ssid: !secret wifi_ssid
