--- a/esphome/bluetooth-proxy-03.yaml
+++ b/esphome/bluetooth-proxy-03.yaml
@@ -19,8 +19,9 @@ api:
 ota:
   platform: esphome
   password: "44fc08955643860f3e11deea01cfb730"
+
+safe_mode:
   num_attempts: 3
-  safe_mode: "no"
 
 wifi:
   ssid: !secret wifi_ssid
