--- a/esphome/bluetooth-proxy.yaml
+++ b/esphome/bluetooth-proxy.yaml
@@ -19,8 +19,9 @@ api:
 ota:
   platform: esphome
   password: "647e232021c2d612ec6d2e6a5aaeaad5"
+
+safe_mode:
   num_attempts: 3
-  safe_mode: "no"
 
 wifi:
   ssid: !secret wifi_ssid
